<resources>
    <string name="app_name">quickBuyApp</string>
    <string name="mobile">Mobile</string>
    <string name="signUp">SignUp</string>
    <string name="mobile1">9000000001</string>
    <string name="password">.  .  .  .  .  .  .</string>
    <string name="signUp_with_us">SignUp With Us</string>
    <string name="full_name">Full Name</string>
    <string name="name">Michael Scott</string>
    <string name="email">Email</string>
    <string name="email1">email@xyz.com</string>
    <string name="password1">Password</string>
    <string name="title_activity_user_dashboard">UserDashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_category">Category</string>
    <string name="product_search">Product Search</string>
    <string name="cart">Cart</string>
    <string name="logout">Logout</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="change">Change</string>
    <string name="popular_category">Popular Products</string>
    <string name="best_deal">Best Deals</string>
    <string name="action_clear_cart">Clear Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="scanner">Scanner</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="food_list">Product List</string>
    <string name="name_of_item">Name of Item</string>
    <string name="product_detail">Product Detail</string>
    <string name="food_name">Product Name</string>
    <string name="description">Description</string>
    <string name="show_comment">Show Comment</string>
    <string name="action_search">Search</string>
    <string name="about_us">Quick Buy is an eCommerce app for your basic needs. We specialize in Books, Furniture, Clothes, Shoes.</string>
    <string name="menu_view_order">View Orders</string>
</resources>